# vnotes-v2

./: .gitignore  CLAUDE.md  index.ts  next.config.ts  package-lock.json  package.json
.claude/commands/: commit.md  diagrams.md  feature-plan.md
docs/: DIAGRAMS.md  FEATURES.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/app/api/keys/: route.ts
src/app/api/summarize/: route.ts
src/app/api/youtube/: route.ts
src/app/notes/: page.tsx
src/components/: Editor.tsx  SettingsModal.module.css  SettingsModal.tsx  Sidebar.module.css  Sidebar.tsx
